# ds_verifier

./: CMakeLists.txt  README.md  compile_commands.json  generate.py  git_commit_date.sh  verify.py
.ds_verify/: verify_results.json
.github/workflows/: cmake.yml
docs/: index.html
src/: CMakeLists.txt  array_wrapper.hpp  ctest_fail.cpp  ctest_test.cpp  verifier.hpp  verify_status.hpp
src/array_wrapper/: CMakeLists.txt  accumlation_test.cpp  accumulation.hpp  fenwick_tree.hpp  segment_tree.hpp  vector.hpp  vector_test.cpp
src/data/: composite.hpp  int32.hpp  modint.hpp
src/data_structures/: accumulation.hpp  fenwick_tree.hpp  segment_tree.hpp
src/init_methods/: random_init_vector.hpp
src/json11/: CMakeLists.txt  json11.cpp
src/queries/: access_at.hpp  accum_from0.hpp  accum_from0_all.hpp  foldl_from0.hpp  foldl_from0_all.hpp  foldl_range.hpp  modify_at.hpp  query_process.hpp  random_choise.hpp  random_select.hpp  same_size.hpp  update_at.hpp
src/queries/init/: init_once.hpp  random_init_vector.hpp
src/unit_test/: test.h  test.hpp
src/verify/: CMakeLists.txt  accumlation2_verify.cpp  accumlation_verify.cpp  fenwick_tree_verify.cpp  segment_tree_verify.cpp
templates/: base.html  index.html
